show score aan/uit Default is aan Tekst in CourseNameDialog moet nog i18n TODO
git-svn-id: https://svn.science.uu.nl/repos/project.fisme.java/DWO/trunk@3747 58dd2db4-0f11-0410-9df4-da15f00f50bd